Added more traits and fixed site+images

--- a/index.html
+++ b/index.html
@@ -12,14 +12,29 @@
     <p>Your one-stop shop for designer baby traits!</p>
   </header>
 
-  <main>
-    <section class="product">
-      <img src="images/blue-eyes.jpg" alt="Blue Eyes Trait" />
-      <h2>Blue Eyes Enhancement</h2>
-      <p>Dreamy blue eyes, now in stock. Morality sold separately.</p>
-      <button onclick="alert('Can you really put a price on humanity?')">Add to Cart</button>
-    </section>
-  </main>
+<main>
+  <section class="product">
+    <img src="images/blue-eyes.jpg" alt="Blue Eyes" />
+    <h2>Blue Eyes</h2>
+    <p>Dreamy eyes that pierce the soul. Questionable ethics included.</p>
+    <button>Add to Cart</button>
+  </section>
+
+  <section class="product">
+    <img src="images/super-intelligence.jpg" alt="Super Intelligence" />
+    <h2>Super Intelligence</h2>
+    <p>Get into Harvard... in the womb.</p>
+    <button>Add to Cart</button>
+  </section>
+
+  <section class="product">
+    <img src="images/perfect-hair.jpg" alt="Perfect Hair" />
+    <h2>Perfect Hair</h2>
+    <p>Genetically flawless flow. You’re welcome.</p>
+    <button>Add to Cart</button>
+  </section>
+</main>
+
 
   <footer>
     <p>&copy; 2025 GeneMart™</p>
